feat: nova atualização

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
-    "builds": [{
-        "src": "dist/main-serverless.js",
-        "use": "@vercel/node"
-    }],
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/dist/main-serverless.js"
-    }]
+    "functions": {
+        "api/index.js": {
+            "runtime": "nodejs18.x"
+        }
+    },
+    "routes": [
+        { "src": "/(.*)", "dest": "/api/index.js" }
+    ]
 }
