--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: secret
       POSTGRES_DB: safeangola
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
 
@@ -26,7 +26,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
-    command: ["npm", "run", "dev"]
+    command: ["npm", "run", "start:dev"]
 
 volumes:
   db_data:
